--- a/NGColombia.Api/appsettings.Development.json
+++ b/NGColombia.Api/appsettings.Development.json
@@ -12,13 +12,13 @@
     "RecaptchaSecret": "123123",
     "ValidatePayUIntegrity": true,
     "ValidateSingleUserTicketType": true,
-    "Test": true
+    "Test": false
   },
   "ReCaptcha": {
     "Secret": "6LefLTUUAAAAANAaRWvWzp6tbGDt8LtOpledYpyE",
     "SiteKey": "6LefLTUUAAAAAMLeOt5SyjhMNrX50P79CqHzmZju",
     "EndpointUrl": "https://www.google.com/recaptcha/api/siteverify",
-    "Validate": false
+    "Validate": true
   },
 
   "PayUConfiguration": {
@@ -28,7 +28,7 @@
     "AccountId": "512321",
     "Test": "1",
     "Currency": "USD",
-    "ResposeUrl": "http://www.ng-colombia.org/response",
-    "ConfirmationUrl": "http://ngcolombia-tickets.azurewebsites.net/purchase/confirmation"
+    "ResposeUrl": "http://localhost:4200/response",
+    "ConfirmationUrl": "http://ngcolombia-tickets.azurewebsites.net/api/purchase/confirmation"
   }
 }
