--- a/NGColombia.Api/appsettings.Production.json
+++ b/NGColombia.Api/appsettings.Production.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "NGColombiaDatabase": "Server=ngcolombia.database.windows.net;Database=ngcolombia;User Id=ngcolombiauser;Password=Ummyygpu*123;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -12,23 +15,23 @@
     "RecaptchaSecret": "123123",
     "ValidatePayUIntegrity": true,
     "ValidateSingleUserTicketType": true,
-    "Test": true
+    "Test": false
   },
   "ReCaptcha": {
     "Secret": "6LefLTUUAAAAANAaRWvWzp6tbGDt8LtOpledYpyE",
     "SiteKey": "6LefLTUUAAAAAMLeOt5SyjhMNrX50P79CqHzmZju",
     "EndpointUrl": "https://www.google.com/recaptcha/api/siteverify",
-    "Validate": false
+    "Validate": true
   },
 
   "PayUConfiguration": {
-    "ApiKey": "4Vj8eK4rloUd272L48hsrarnUA",
-    "GatewayUrl": "https://sandbox.gateway.payulatam.com/ppp-web-gateway/",
-    "MerchantId": "508029",
-    "AccountId": "512321",
-    "Test": "1",
+    "ApiKey": "g15bLii4dd8tB5SCU40sV7U158",
+    "GatewayUrl": "https://gateway.payulatam.com/ppp-web-gateway",
+    "MerchantId": "685301",
+    "AccountId": "688131",
+    "Test": "0",
     "Currency": "USD",
     "ResposeUrl": "http://www.ng-colombia.org/response",
-    "ConfirmationUrl": "http://ngcolombia-tickets.azurewebsites.net/purchase/confirmation"
+    "ConfirmationUrl": "http://ngcolombia-tickets.azurewebsites.net/api/purchase/confirmation"
   }
 }
