--- a/NGColombia.Api/appsettings.json
+++ b/NGColombia.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "NGColombiaDatabase": "Server=ngcolombia.database.windows.net;Database=ngcolombia;User Id=ngcolombiauser;Password=Ummyygpu*123;"
+    "NGColombiaDatabase": "Server=tcp:ngcolombia.database.windows.net,1433;Initial Catalog=ngcolombiadev;Persist Security Info=False;User ID=ngcolombiauser;Password=Ummyygpu*123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -36,7 +36,7 @@
     "Test": "1",
     "Currency": "USD",
     "ResposeUrl": "http://www.ng-colombia.org/response",
-    "ConfirmationUrl": "http://ngcolombia-tickets.azurewebsites.net/purchase/confirmation"
+    "ConfirmationUrl": "http://ngcolombia-tickets.azurewebsites.net/api/purchase/confirmation"
   },
   "ApplicationInsights": {
     "InstrumentationKey": "0912f553-951d-4e42-af54-0cc570b89d57"
