--- a/NGColombia.Api/web.config
+++ b/NGColombia.Api/web.config
@@ -10,7 +10,17 @@
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified"/>
     </handlers>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" />
+    <security>
+    <requestFiltering>
+      <requestLimits maxAllowedContentLength="52428800" />
+    </requestFiltering>
+  </security>
   </system.webServer>
+  <system.web>
+     <httpRuntime maxRequestLength="32768" />
+
+  </system.web>
+
   
 
 </configuration>
