New processing step

--- a/NGColombia.Api/appsettings.Development.json
+++ b/NGColombia.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "NGColombiaDatabase": "Server=ngcolombia.database.windows.net;Database=ngcolombia;User Id=ngcolombiauser;Password=Ummyygpu*123;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -22,13 +25,14 @@
   },
 
   "PayUConfiguration": {
-    "ApiKey": "4Vj8eK4rloUd272L48hsrarnUA",
-    "GatewayUrl": "https://sandbox.gateway.payulatam.com/ppp-web-gateway/",
-    "MerchantId": "508029",
-    "AccountId": "512321",
-    "Test": "1",
+    "ApiKey": "g15bLii4dd8tB5SCU40sV7U158",
+    "AppLogin": "x41CEAsS6cPCNO8",
+    "GatewayUrl": "https://gateway.payulatam.com/ppp-web-gateway",
+    "MerchantId": "685301",
+    "AccountId": "688131",
+    "Test": "0",
     "Currency": "USD",
-    "ResposeUrl": "http://localhost:4200/response",
+    "ResposeUrl": "http://www.ng-colombia.org/response",
     "ConfirmationUrl": "http://ngcolombia-tickets.azurewebsites.net/api/purchase/confirmation"
   }
 }
