--- a/NGColombia.Api/appsettings.Production.json
+++ b/NGColombia.Api/appsettings.Production.json
@@ -26,6 +26,7 @@
 
   "PayUConfiguration": {
     "ApiKey": "g15bLii4dd8tB5SCU40sV7U158",
+    "AppLogin": "x41CEAsS6cPCNO8",
     "GatewayUrl": "https://gateway.payulatam.com/ppp-web-gateway",
     "MerchantId": "685301",
     "AccountId": "688131",
