--- a/NGColombia.Api/appsettings.json
+++ b/NGColombia.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "NGColombiaDatabase": "Server=tcp:ngcolombia.database.windows.net,1433;Initial Catalog=ngcolombiadev;Persist Security Info=False;User ID=ngcolombiauser;Password=Ummyygpu*123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "NGColombiaDatabase": "Server=ngcolombia.database.windows.net;Database=ngcolombia;User Id=ngcolombiauser;Password=Ummyygpu*123;"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -30,6 +30,8 @@
   },
   "PayUConfiguration": {
     "ApiKey": "4Vj8eK4rloUd272L48hsrarnUA",
+    "AppLogin": "",
+    "ApiUrl": "https://api.payulatam.com/reports-api/4.0/service.cgi",
     "GatewayUrl": "https://sandbox.gateway.payulatam.com/ppp-web-gateway/",
     "MerchantId": "508029",
     "AccountId": "512321",
